project('word-search-solver', 'c')
install_headers('word-search.h')
ocr = dependency('tesseract')
img = dependency('lept')
lib = static_library('wordsearch', 'trie.c', 'puzzle-parse.c', 'ocr.c', dependencies : [ocr, img], install : true)
executable('word-search', 'main.c', link_with : lib, install : true)
